PROJECT/Syntax Analysis/y.output
Nonterminals useless in grammar

    literal
    switch
    cases
    case


Terminals unused in grammar

    SWITCH
    CASE
    DEFAULT
    ':'


Rules useless in grammar

  102 literal: primitive_literal
  103        | STRING

  104 non_if: switch

  105 switch: SWITCH '(' expression ')' '{' cases '}'

  106 cases: case cases

  107 case: CASE integer_literal ':' statement
  108     | DEFAULT ':' statement


State 0 conflicts: 3 shift/reduce
State 9 conflicts: 3 shift/reduce
State 64 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce


Grammar

    0 $accept: s $end

    1 s: program

    2 program: functions main '(' ')' '{' statements '}'

    3 statements: statement statements
    4           | %empty

    5 datatype: INT
    6         | FLOAT
    7         | CHAR

    8 primitive_literal: integer_literal
    9                  | DECIMAL

   10 integer_literal: INTEGER
   11                | CHARACTER

   12 functions: function functions
   13          | %empty

   14 function: datatype IDENTIFIER '(' formal_parameters ')' '{' statements '}'
   15         | IDENTIFIER '(' formal_parameters ')' '{' statements '}'

   16 formal_parameters: formal_parameter ',' formal_parameters
   17                  | formal_parameter
   18                  | %empty

   19 formal_parameter: datatype variable

   20 actual_parameters: variable ',' actual_parameters
   21                  | variable
   22                  | %empty

   23 main: datatype MAIN
   24     | MAIN

   25 variable: IDENTIFIER
   26         | MAIN
   27         | PRINTF
   28         | array_access

   29 array_access: IDENTIFIER '[' expression ']'
   30             | IDENTIFIER '[' expression ']' '[' expression ']'

   31 statement: if
   32          | non_if

   33 non_if: expression ';'
   34       | assignment
   35       | declaration
   36       | looping
   37       | compound
   38       | printf
   39       | function_call ';'
   40       | jump
   41       | return

   42 printf: PRINTF '(' STRING ')' ';'
   43       | PRINTF '(' STRING ',' actual_parameters ')' ';'

   44 compound: '{' statements '}'

   45 function_call: IDENTIFIER '(' actual_parameters ')'

   46 jump: BREAK ';'
   47     | CONTINUE ';'

   48 return: RETURN operand ';'
   49       | RETURN STRING ';'
   50       | RETURN expression ';'
   51       | RETURN ';'

   52 looping: while
   53        | for

   54 declaration: datatype declaration_list ';'

   55 declaration_list: array_declaration ',' declaration_list
   56                 | non_array_declaration ',' declaration_list
   57                 | array_declaration
   58                 | non_array_declaration

   59 array_declaration: array_access
   60                  | IDENTIFIER '[' expression ']' '=' '{' value_list '}'
   61                  | IDENTIFIER '[' ']' '=' '{' value_list '}'
   62                  | IDENTIFIER '[' expression ']' '[' expression ']' '=' '{' value_list '}'
   63                  | IDENTIFIER '[' ']' '[' expression ']' '=' '{' value_list '}'
   64                  | IDENTIFIER '[' expression ']' '[' expression ']' '=' '{' value_block '}'
   65                  | IDENTIFIER '[' ']' '[' expression ']' '=' '{' value_block '}'
   66                  | IDENTIFIER '[' expression ']' '=' STRING
   67                  | IDENTIFIER '[' ']' '=' STRING

   68 value_list: primitive_literal
   69           | primitive_literal ',' value_list

   70 value_block: '{' value_list '}'
   71            | '{' value_list '}' ',' value_block

   72 non_array_declaration: IDENTIFIER
   73                      | IDENTIFIER '=' expression

   74 expression: '!' expression
   75           | expression '+' expression
   76           | expression '-' expression
   77           | expression '*' expression
   78           | expression '/' expression
   79           | expression '%' expression
   80           | expression '<' expression
   81           | expression '>' expression
   82           | expression EQ expression
   83           | expression NE expression
   84           | expression GE expression
   85           | expression LE expression
   86           | expression AND expression
   87           | expression OR expression
   88           | operand
   89           | '(' expression ')'

   90 operand: variable
   91        | function_call
   92        | primitive_literal

   93 assignment: variable '=' expression ';'

   94 loop_expression: expression
   95                | assignment
   96                | %empty

   97 for: FOR '(' loop_expression ';' loop_expression ';' loop_expression ')' statement
   98    | FOR '(' declaration ';' expression ';' expression ')' statement

   99 while: WHILE '(' loop_expression ')' statement

  100 if: IF '(' expression ')' statement
  101   | IF '(' expression ')' statement ELSE statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 74
    '%' (37) 79
    '(' (40) 2 14 15 42 43 45 89 97 98 99 100 101
    ')' (41) 2 14 15 42 43 45 89 97 98 99 100 101
    '*' (42) 77
    '+' (43) 75
    ',' (44) 16 20 43 55 56 69 71
    '-' (45) 76
    '/' (47) 78
    ':' (58)
    ';' (59) 33 39 42 43 46 47 48 49 50 51 54 93 97 98
    '<' (60) 80
    '=' (61) 60 61 62 63 64 65 66 67 73 93
    '>' (62) 81
    '[' (91) 29 30 60 61 62 63 64 65 66 67
    ']' (93) 29 30 60 61 62 63 64 65 66 67
    '{' (123) 2 14 15 44 60 61 62 63 64 65 70 71
    '}' (125) 2 14 15 44 60 61 62 63 64 65 70 71
    error (256)
    IDENTIFIER (258) 14 15 25 29 30 45 60 61 62 63 64 65 66 67 72 73
    DECIMAL (259) 9
    INTEGER (260) 10
    STRING (261) 42 43 49 66 67
    CHARACTER (262) 11
    INT (263) 5
    FLOAT (264) 6
    CHAR (265) 7
    IF (266) 100 101
    ELSE (267) 101
    FOR (268) 97 98
    WHILE (269) 99
    SWITCH (270)
    CASE (271)
    DEFAULT (272)
    BREAK (273) 46
    CONTINUE (274) 47
    RETURN (275) 48 49 50 51
    MAIN (276) 23 24 26
    PRINTF (277) 27 42 43
    OR (278) 87
    AND (279) 86
    EQ (280) 82
    NE (281) 83
    GE (282) 84
    LE (283) 85


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    s (48)
        on left: 1
        on right: 0
    program (49)
        on left: 2
        on right: 1
    statements (50)
        on left: 3 4
        on right: 2 3 14 15 44
    datatype (51)
        on left: 5 6 7
        on right: 14 19 23 54
    primitive_literal (52)
        on left: 8 9
        on right: 68 69 92
    integer_literal (53)
        on left: 10 11
        on right: 8
    functions (54)
        on left: 12 13
        on right: 2 12
    function (55)
        on left: 14 15
        on right: 12
    formal_parameters (56)
        on left: 16 17 18
        on right: 14 15 16
    formal_parameter (57)
        on left: 19
        on right: 16 17
    actual_parameters (58)
        on left: 20 21 22
        on right: 20 43 45
    main (59)
        on left: 23 24
        on right: 2
    variable (60)
        on left: 25 26 27 28
        on right: 19 20 21 90 93
    array_access (61)
        on left: 29 30
        on right: 28 59
    statement (62)
        on left: 31 32
        on right: 3 97 98 99 100 101
    non_if (63)
        on left: 33 34 35 36 37 38 39 40 41
        on right: 32
    printf (64)
        on left: 42 43
        on right: 38
    compound (65)
        on left: 44
        on right: 37
    function_call (66)
        on left: 45
        on right: 39 91
    jump (67)
        on left: 46 47
        on right: 40
    return (68)
        on left: 48 49 50 51
        on right: 41
    looping (69)
        on left: 52 53
        on right: 36
    declaration (70)
        on left: 54
        on right: 35 98
    declaration_list (71)
        on left: 55 56 57 58
        on right: 54 55 56
    array_declaration (72)
        on left: 59 60 61 62 63 64 65 66 67
        on right: 55 57
    value_list (73)
        on left: 68 69
        on right: 60 61 62 63 69 70 71
    value_block (74)
        on left: 70 71
        on right: 64 65 71
    non_array_declaration (75)
        on left: 72 73
        on right: 56 58
    expression (76)
        on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 29 30 33 50 60 62 63 64 65 66 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 89 93 94 98 100 101
    operand (77)
        on left: 90 91 92
        on right: 48 88
    assignment (78)
        on left: 93
        on right: 34 95
    loop_expression (79)
        on left: 94 95 96
        on right: 97 99
    for (80)
        on left: 97 98
        on right: 53
    while (81)
        on left: 99
        on right: 52
    if (82)
        on left: 100 101
        on right: 31


State 0

    0 $accept: . s $end

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4

    INT       [reduce using rule 13 (functions)]
    FLOAT     [reduce using rule 13 (functions)]
    CHAR      [reduce using rule 13 (functions)]
    $default  reduce using rule 13 (functions)

    s          go to state 5
    program    go to state 6
    datatype   go to state 7
    functions  go to state 8
    function   go to state 9


State 1

   15 function: IDENTIFIER . '(' formal_parameters ')' '{' statements '}'

    '('  shift, and go to state 10


State 2

    5 datatype: INT .

    $default  reduce using rule 5 (datatype)


State 3

    6 datatype: FLOAT .

    $default  reduce using rule 6 (datatype)


State 4

    7 datatype: CHAR .

    $default  reduce using rule 7 (datatype)


State 5

    0 $accept: s . $end

    $end  shift, and go to state 11


State 6

    1 s: program .

    $default  reduce using rule 1 (s)


State 7

   14 function: datatype . IDENTIFIER '(' formal_parameters ')' '{' statements '}'

    IDENTIFIER  shift, and go to state 12


State 8

    2 program: functions . main '(' ')' '{' statements '}'

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4
    MAIN   shift, and go to state 13

    datatype  go to state 14
    main      go to state 15


State 9

   12 functions: function . functions

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4

    INT       [reduce using rule 13 (functions)]
    FLOAT     [reduce using rule 13 (functions)]
    CHAR      [reduce using rule 13 (functions)]
    $default  reduce using rule 13 (functions)

    datatype   go to state 7
    functions  go to state 16
    function   go to state 9


State 10

   15 function: IDENTIFIER '(' . formal_parameters ')' '{' statements '}'

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    $default  reduce using rule 18 (formal_parameters)

    datatype           go to state 17
    formal_parameters  go to state 18
    formal_parameter   go to state 19


State 11

    0 $accept: s $end .

    $default  accept


State 12

   14 function: datatype IDENTIFIER . '(' formal_parameters ')' '{' statements '}'

    '('  shift, and go to state 20


State 13

   24 main: MAIN .

    $default  reduce using rule 24 (main)


State 14

   23 main: datatype . MAIN

    MAIN  shift, and go to state 21


State 15

    2 program: functions main . '(' ')' '{' statements '}'

    '('  shift, and go to state 22


State 16

   12 functions: function functions .

    $default  reduce using rule 12 (functions)


State 17

   19 formal_parameter: datatype . variable

    IDENTIFIER  shift, and go to state 23
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 25

    variable      go to state 26
    array_access  go to state 27


State 18

   15 function: IDENTIFIER '(' formal_parameters . ')' '{' statements '}'

    ')'  shift, and go to state 28


State 19

   16 formal_parameters: formal_parameter . ',' formal_parameters
   17                  | formal_parameter .

    ','  shift, and go to state 29

    $default  reduce using rule 17 (formal_parameters)


State 20

   14 function: datatype IDENTIFIER '(' . formal_parameters ')' '{' statements '}'

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    $default  reduce using rule 18 (formal_parameters)

    datatype           go to state 17
    formal_parameters  go to state 30
    formal_parameter   go to state 19


State 21

   23 main: datatype MAIN .

    $default  reduce using rule 23 (main)


State 22

    2 program: functions main '(' . ')' '{' statements '}'

    ')'  shift, and go to state 31


State 23

   25 variable: IDENTIFIER .
   29 array_access: IDENTIFIER . '[' expression ']'
   30             | IDENTIFIER . '[' expression ']' '[' expression ']'

    '['  shift, and go to state 32

    $default  reduce using rule 25 (variable)


State 24

   26 variable: MAIN .

    $default  reduce using rule 26 (variable)


State 25

   27 variable: PRINTF .

    $default  reduce using rule 27 (variable)


State 26

   19 formal_parameter: datatype variable .

    $default  reduce using rule 19 (formal_parameter)


State 27

   28 variable: array_access .

    $default  reduce using rule 28 (variable)


State 28

   15 function: IDENTIFIER '(' formal_parameters ')' . '{' statements '}'

    '{'  shift, and go to state 33


State 29

   16 formal_parameters: formal_parameter ',' . formal_parameters

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CHAR   shift, and go to state 4

    $default  reduce using rule 18 (formal_parameters)

    datatype           go to state 17
    formal_parameters  go to state 34
    formal_parameter   go to state 19


State 30

   14 function: datatype IDENTIFIER '(' formal_parameters . ')' '{' statements '}'

    ')'  shift, and go to state 35


State 31

    2 program: functions main '(' ')' . '{' statements '}'

    '{'  shift, and go to state 36


State 32

   29 array_access: IDENTIFIER '[' . expression ']'
   30             | IDENTIFIER '[' . expression ']' '[' expression ']'

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    CHARACTER   shift, and go to state 40
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 25
    '!'         shift, and go to state 41
    '('         shift, and go to state 42

    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 45
    array_access       go to state 27
    function_call      go to state 46
    expression         go to state 47
    operand            go to state 48


State 33

   15 function: IDENTIFIER '(' formal_parameters ')' '{' . statements '}'

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    CHARACTER   shift, and go to state 40
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    IF          shift, and go to state 49
    FOR         shift, and go to state 50
    WHILE       shift, and go to state 51
    BREAK       shift, and go to state 52
    CONTINUE    shift, and go to state 53
    RETURN      shift, and go to state 54
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 55
    '!'         shift, and go to state 41
    '('         shift, and go to state 42
    '{'         shift, and go to state 56

    $default  reduce using rule 4 (statements)

    statements         go to state 57
    datatype           go to state 58
    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 59
    array_access       go to state 27
    statement          go to state 60
    non_if             go to state 61
    printf             go to state 62
    compound           go to state 63
    function_call      go to state 64
    jump               go to state 65
    return             go to state 66
    looping            go to state 67
    declaration        go to state 68
    expression         go to state 69
    operand            go to state 48
    assignment         go to state 70
    for                go to state 71
    while              go to state 72
    if                 go to state 73


State 34

   16 formal_parameters: formal_parameter ',' formal_parameters .

    $default  reduce using rule 16 (formal_parameters)


State 35

   14 function: datatype IDENTIFIER '(' formal_parameters ')' . '{' statements '}'

    '{'  shift, and go to state 74


State 36

    2 program: functions main '(' ')' '{' . statements '}'

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    CHARACTER   shift, and go to state 40
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    IF          shift, and go to state 49
    FOR         shift, and go to state 50
    WHILE       shift, and go to state 51
    BREAK       shift, and go to state 52
    CONTINUE    shift, and go to state 53
    RETURN      shift, and go to state 54
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 55
    '!'         shift, and go to state 41
    '('         shift, and go to state 42
    '{'         shift, and go to state 56

    $default  reduce using rule 4 (statements)

    statements         go to state 75
    datatype           go to state 58
    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 59
    array_access       go to state 27
    statement          go to state 60
    non_if             go to state 61
    printf             go to state 62
    compound           go to state 63
    function_call      go to state 64
    jump               go to state 65
    return             go to state 66
    looping            go to state 67
    declaration        go to state 68
    expression         go to state 69
    operand            go to state 48
    assignment         go to state 70
    for                go to state 71
    while              go to state 72
    if                 go to state 73


State 37

   25 variable: IDENTIFIER .
   29 array_access: IDENTIFIER . '[' expression ']'
   30             | IDENTIFIER . '[' expression ']' '[' expression ']'
   45 function_call: IDENTIFIER . '(' actual_parameters ')'

    '('  shift, and go to state 76
    '['  shift, and go to state 32

    $default  reduce using rule 25 (variable)


State 38

    9 primitive_literal: DECIMAL .

    $default  reduce using rule 9 (primitive_literal)


State 39

   10 integer_literal: INTEGER .

    $default  reduce using rule 10 (integer_literal)


State 40

   11 integer_literal: CHARACTER .

    $default  reduce using rule 11 (integer_literal)


State 41

   74 expression: '!' . expression

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    CHARACTER   shift, and go to state 40
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 25
    '!'         shift, and go to state 41
    '('         shift, and go to state 42

    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 45
    array_access       go to state 27
    function_call      go to state 46
    expression         go to state 77
    operand            go to state 48


State 42

   89 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    CHARACTER   shift, and go to state 40
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 25
    '!'         shift, and go to state 41
    '('         shift, and go to state 42

    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 45
    array_access       go to state 27
    function_call      go to state 46
    expression         go to state 78
    operand            go to state 48


State 43

   92 operand: primitive_literal .

    $default  reduce using rule 92 (operand)


State 44

    8 primitive_literal: integer_literal .

    $default  reduce using rule 8 (primitive_literal)


State 45

   90 operand: variable .

    $default  reduce using rule 90 (operand)


State 46

   91 operand: function_call .

    $default  reduce using rule 91 (operand)


State 47

   29 array_access: IDENTIFIER '[' expression . ']'
   30             | IDENTIFIER '[' expression . ']' '[' expression ']'
   75 expression: expression . '+' expression
   76           | expression . '-' expression
   77           | expression . '*' expression
   78           | expression . '/' expression
   79           | expression . '%' expression
   80           | expression . '<' expression
   81           | expression . '>' expression
   82           | expression . EQ expression
   83           | expression . NE expression
   84           | expression . GE expression
   85           | expression . LE expression
   86           | expression . AND expression
   87           | expression . OR expression

    OR   shift, and go to state 79
    AND  shift, and go to state 80
    EQ   shift, and go to state 81
    NE   shift, and go to state 82
    '<'  shift, and go to state 83
    '>'  shift, and go to state 84
    GE   shift, and go to state 85
    LE   shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91
    ']'  shift, and go to state 92


State 48

   88 expression: operand .

    $default  reduce using rule 88 (expression)


State 49

  100 if: IF . '(' expression ')' statement
  101   | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 93


State 50

   97 for: FOR . '(' loop_expression ';' loop_expression ';' loop_expression ')' statement
   98    | FOR . '(' declaration ';' expression ';' expression ')' statement

    '('  shift, and go to state 94


State 51

   99 while: WHILE . '(' loop_expression ')' statement

    '('  shift, and go to state 95


State 52

   46 jump: BREAK . ';'

    ';'  shift, and go to state 96


State 53

   47 jump: CONTINUE . ';'

    ';'  shift, and go to state 97


State 54

   48 return: RETURN . operand ';'
   49       | RETURN . STRING ';'
   50       | RETURN . expression ';'
   51       | RETURN . ';'

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    STRING      shift, and go to state 98
    CHARACTER   shift, and go to state 40
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 25
    '!'         shift, and go to state 41
    '('         shift, and go to state 42
    ';'         shift, and go to state 99

    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 45
    array_access       go to state 27
    function_call      go to state 46
    expression         go to state 100
    operand            go to state 101


State 55

   27 variable: PRINTF .
   42 printf: PRINTF . '(' STRING ')' ';'
   43       | PRINTF . '(' STRING ',' actual_parameters ')' ';'

    '('  shift, and go to state 102

    $default  reduce using rule 27 (variable)


State 56

   44 compound: '{' . statements '}'

    IDENTIFIER  shift, and go to state 37
    DECIMAL     shift, and go to state 38
    INTEGER     shift, and go to state 39
    CHARACTER   shift, and go to state 40
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    IF          shift, and go to state 49
    FOR         shift, and go to state 50
    WHILE       shift, and go to state 51
    BREAK       shift, and go to state 52
    CONTINUE    shift, and go to state 53
    RETURN      shift, and go to state 54
    MAIN        shift, and go to state 24
    PRINTF      shift, and go to state 55
    '!'         shift, and go to state 41
    '('         shift, and go to state 42
    '{'         shift, and go to state 56

    $default  reduce using rule 4 (statements)

    statements         go to state 103
    datatype           go to state 58
    primitive_literal  go to state 43
    integer_literal    go to state 44
    variable           go to state 59
    array_access       go to state 27
    statement          go to state 60
    non_if             go to state 61
    printf             go to state 62
    compound           go to state 63
    function_call      go to state 64
    jump               go to state 65
    return             go to state 66
    looping            go to state 67
    declaration        go to state 68
    expression         go to state 69
    operand            go to state 48
    assignment         go to state 70
    for                go to state 71
    while              go to state 72
    if                 go to state 73


State 57

   15 function: IDENTIFIER '(' formal_parameters ')' '{' statements . '}'

    '}'  shift, and go to state 104


State 58

   54 declaration: datatype . declaration_list ';'

    IDENTIFIER  shift, and go to state 105

    array_access           go to state 106
    declaration_list       go to state 107
    array_declaration      go to state 108
    non_array_declaration  go to state 109


State 59

   90 operand: variable .
   93 assignment: variable . '=' expression ';'

    '='  shift, and go to state 110

    $default  reduce using rule 90 (operand)


State 60

    3 statements: statement . statements
